--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <br>
-        <br>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <h1>Lasagna</h1>
     </body>
    
 </html>
