Two new recipe pages added soup and cake pages to recipes added links to pages on index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <br>
         <br>
         <a href="recipes/lasagna.html">Lasagna</a>
+        <br>
+        <br>
+        <a href="recipes/soup.html">Soup</a>
+        <br>
+        <br>
+        <a href="recipes/cake.html">Cake</a>
     </body>
    
 </html>
